k8s/ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faang-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: faang-account.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-account-service
            port:
              number: 80
  - host: faang-achievement.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-achievement-service
            port:
              number: 80
  - host: faang-analytics.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-analytics-service
            port:
              number: 80
  - host: faang-notification.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-notification-service
            port:
              number: 80
  - host: faang-payment.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-payment-service
            port:
              number: 80
  - host: faang-post.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-post-service
            port:
              number: 80
  - host: faang-project.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-project-service
            port:
              number: 80
  - host: faang-url-shortener.domain.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faang-url-shortener-service
            port:
              number: 80
